--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.2"
   }
 }
